# Personal-Health-Record-Blockchain

./: CMakeLists.txt  GerekliOlabilir  README.TXT  main.cpp
Base/: Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  Record.cpp  Record.h  User.h
Records/: DoctorRecord.cpp  DoctorRecord.h  PatientRecord.cpp  PatientRecord.h
Users/: Doctor.cpp  Doctor.h  Patient.cpp  Patient.h
